--- a/sample/src/main/res/layout/act_main.xml
+++ b/sample/src/main/res/layout/act_main.xml
@@ -12,12 +12,30 @@
         android:layout_height="match_parent"
         />
 
-    <Button
-        android:id="@+id/enableCamera"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:text="@string/enable_camera"
-        />
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/enableCamera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:text="@string/enable_camera"
+            />
+
+        <Button
+            android:id="@+id/multiple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:text="获取多权限"
+            />
+
+    </LinearLayout>
+
+
 </merge>
